sumo/tests/sumo/output/vtypeprobe/errors/freq0/errors.sumo
Error: Frequency must not be zero (in vtypeprobe 'test1').
Quitting (on error).
